Revision 3: Address PR review comments
- Fix Content-Disposition header injection by creating FileNameUtils utility
- Use Jersey's ContentDisposition builder for safe header encoding
- Change HTTP status from 404 to 400 for non-completed export jobs
- Add dataset join to findById and findInProgressByDataset queries